--- a/pika.html
+++ b/pika.html
@@ -9,7 +9,7 @@
 <body>
 <div class="row">
 	<div class="col-lg-12">
-		<img id="pika" src="./longer.png">
+		<img id="pika" src="longer.png">
 	</div>
 </div>
 
