--- a/pika.html
+++ b/pika.html
@@ -7,10 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="pika.css">
 </head>
 <body>
-<div class="row">
-	<div class="col-lg-12">
-		<img id="pika" src="pika.jpg">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<img id="pika" src="pika.jpg">
+			</div>
+		</div>
 	</div>
-</div>
+	
 </body>
 </html>
