--- a/pika.html
+++ b/pika.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1>Hello</h1>
+				<img id="pika" src="pika.jpg">
 			</div>
 		</div>
 	</div>
