--- a/pika.html
+++ b/pika.html
@@ -9,11 +9,27 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-12 pika">
 				<img id="pika" src="pika.jpg">
 			</div>
 		</div>
 	</div>
-	
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+	<script type="text/javascript">
+		var run = true;
+		$(window).scroll(function (event) {
+			if($(window).scrollTop() < 1500) {
+		    	run = true;
+		    	console.log('running')
+		    };
+		    console.log(run)
+			if($(window).scrollTop() > 15000 && run == true) {
+				$('html, body').animate({ scrollTop: 1000 }, 1000);
+				run = false;
+				console.log('runningggggggggg')
+			};
+		});
+		    
+	</script>
 </body>
 </html>
