--- a/pika.html
+++ b/pika.html
@@ -23,7 +23,7 @@
 		    };
 		    console.log(run)
 			if($(window).scrollTop() > 15000 && run == true) {
-				$('html, body').animate({ scrollTop: 1000 }, 1000);
+				$('html, body').animate({ scrollTop: 1000 }, 'fast');
 				run = false;
 			};
 		});
