--- a/pika.html
+++ b/pika.html
@@ -18,14 +18,18 @@
 	<script type="text/javascript">
 		var run = true;
 		$(window).scroll(function (event) {
-			if($(window).scrollTop() < 1500) {
+			if($(window).scrollTop() < 15000) {
 		    	run = true;
 		    };
 		    console.log(run)
-			if($(window).scrollTop() > 15000 && run == true) {
+			if($(window).scrollTop() >= 15000 && run == true) {
 				$('html, body').animate({ scrollTop: 1000 }, 'fast');
 				run = false;
 			};
+			if($(window).scrollTop() > 18000) {
+				run = true;
+			}
+			console.log(run);
 		});
 		    
 	</script>
